{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 13,
  "lineage": "e0820777-e884-4a25-e580-7b26653ea020",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jenkins-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234877069070:internet-gateway/igw-0aedb79280e1221a9",
            "id": "igw-0aedb79280e1221a9",
            "owner_id": "234877069070",
            "tags": {
              "Name": "jenkins-igw"
            },
            "tags_all": {
              "Name": "jenkins-igw"
            },
            "vpc_id": "vpc-06192e0775788f107"
          },
          "dependencies": [
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234877069070:route-table/rtb-0d198c027769b8a06",
            "id": "rtb-0d198c027769b8a06",
            "owner_id": "234877069070",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aedb79280e1221a9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-public"
            },
            "tags_all": {
              "Name": "jenkins-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06192e0775788f107"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jenkins-igw",
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins-public-rt-assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f37571328310e7b2",
            "route_table_id": "rtb-0d198c027769b8a06",
            "subnet_id": "subnet-0ba095538eeb48596"
          },
          "dependencies": [
            "aws_internet_gateway.jenkins-igw",
            "aws_route_table.jenkins-rt-public",
            "aws_subnet.jenkins-public-subnets",
            "aws_vpc.jenkins-vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234877069070:security-group/sg-04f35028400894e0f",
            "description": "Allow ssh and standard http/https ports inbound and everything outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f35028400894e0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Jenkins - Allow web traffic",
            "name_prefix": "",
            "owner_id": "234877069070",
            "revoke_rules_on_delete": false,
            "tags": {
              "Terraform": "true"
            },
            "tags_all": {
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-7aef6607"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234877069070:security-group/sg-025f2bc194c32e4b1",
            "description": "access to public instances",
            "egress": [],
            "id": "sg-025f2bc194c32e4b1",
            "ingress": [],
            "name": "jenkins-public-group",
            "name_prefix": "",
            "owner_id": "234877069070",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06192e0775788f107"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins-public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234877069070:subnet/subnet-0ba095538eeb48596",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ba095538eeb48596",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "234877069070",
            "tags": {
              "Name": "jenkins-tf-public-1"
            },
            "tags_all": {
              "Name": "jenkins-tf-public-1"
            },
            "vpc_id": "vpc-06192e0775788f107"
          },
          "dependencies": [
            "aws_vpc.jenkins-vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234877069070:vpc/vpc-0c5c159ce96526306",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa80a14ba4e3f65e",
            "default_route_table_id": "rtb-0f5b3eebc7ed528d7",
            "default_security_group_id": "sg-03d15138cfed27484",
            "dhcp_options_id": "dopt-9b6349e1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c5c159ce96526306",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f5b3eebc7ed528d7",
            "owner_id": "234877069070",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Name": "jenkins-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234877069070:vpc/vpc-06192e0775788f107",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0943082ac7bc3a89c",
            "default_route_table_id": "rtb-07df0e6ed692ed54c",
            "default_security_group_id": "sg-03bae47928d4255cd",
            "dhcp_options_id": "dopt-9b6349e1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06192e0775788f107",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07df0e6ed692ed54c",
            "owner_id": "234877069070",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Name": "jenkins-vpc"
            }
          }
        }
      ]
    }
  ]
}